Changelog of hudsonintegration
===================================================


0.1 (unreleased)
----------------

- Added documentation.

- Added jslint checker.

- Added basic run_test and create_reports scripts that basically mimic the
  bash scripts used in hudson.

- Initial library skeleton created by thaskel.  [Reinout]